# twg_image

./: CMakeLists.txt
examples/: fractal_on_line.cpp  rgb_formulae.cpp
include/twg/: basics.h  color.h  image.h  point.h  twg.h
include/twg/image/: image_agg.h  image_drawing.h
src/: basics.cpp  image.cpp  image_agg.cpp  image_drawing_aa.cpp
